manifests/cluster-addons/immich/templates/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-lan
  namespace: immich
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
  ports:
    - name: http
      port: 2283
      protocol: TCP
      targetPort: http
