manifests/cluster-addons/immich/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/description: Photos
    gethomepage.dev/group: Meida
    gethomepage.dev/icon: immich.png
    gethomepage.dev/name: Immich
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: bakseter-net-gateway-home
      namespace: tailscale

  hostnames:
    - immich.bakseter.net

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: immich-server
          port: 2283
