manifests/cluster-addons/immich/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-server
  namespace: immich
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: server

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tailscale
            tailscale.com/parent-resource: immich-server
            tailscale.com/parent-resource-ns: immich
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-home
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus-blackbox-exporter
      toPorts:
        - ports:
            - port: '2283'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '8081'
              protocol: TCP
            - port: '8082'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: immich
            app.kubernetes.io/name: valkey
      toPorts:
        - ports:
            - port: '6379'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: immich
            app.kubernetes.io/name: machine-learning
      toPorts:
        - ports:
            - port: '3003'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: immich-database
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP

    - toFQDNs:
        - matchName: version.immich.cloud
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-valkey
  namespace: immich
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: valkey

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: immich
            app.kubernetes.io/name: server
      toPorts:
        - ports:
            - port: '6379'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: machine-learning

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: immich
            app.kubernetes.io/name: server
      toPorts:
        - ports:
            - port: '3003'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toFQDNs:
        # modelscope
        - matchName: www.modelscope.cn
        - matchName: cdn-lfs-cn-1.modelscope.cn
        # huggingface
        - matchName: huggingface.co
        - matchName: cas-server.xethub.hf.co
        - matchName: transfer.xethub.hf.co
        - matchName: us.aws.cdn.hf.co
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-database
  namespace: immich
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: immich-database

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: immich
            app.kubernetes.io/name: server
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudnative-pg
            k8s:io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP
            - port: '8000'
              protocol: TCP

  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP
