manifests/cluster-addons/immich/templates/networkpolicy-allow-ingress-cnpg.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-cnpg
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: immich-database
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - port: 8000
        - port: 543
